index.html updated

--- a/form.html
+++ b/form.html
@@ -33,6 +33,7 @@
        Forgot <a href="#"> password? </a>  
       </div> 
     </form>
+    <article>first article</article>
     <footer>
         @copyright
     </footer>
